# pulse-review-bot-CB

./: .gitignore  CHANGELOG.md  README.md  make-prs.sh  post-comments.py  pyproject.toml  review-pr.sh
.github/workflows/: ai-review.yml  ci.yml
services/: api.py  notifier.py  notify_client.py  scorer.py  util.py
tests/: test_api.py  test_notifier.py  test_scorer.py  test_util.py
